fixed lack of line-through on iphone

--- a/styles/_game.scss
+++ b/styles/_game.scss
@@ -123,6 +123,9 @@ input {
 }
 
 .crossed-out {
+    text-decoration: line-through $color-pen 2px;
+    
+    //for iphone
     text-decoration-line: line-through;
     text-decoration-color: $color-pen;
     text-decoration-thickness: 2px;
